--- a/src/Android_App/app/src/main/res/layout/activity_main.xml
+++ b/src/Android_App/app/src/main/res/layout/activity_main.xml
@@ -10,30 +10,20 @@
     tools:ignore="MissingClass"
     tools:openDrawer="start">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <include layout="@layout/content_layout"
         android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <androidx.appcompat.widget.Toolbar
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="@color/cardview_dark_background"
-            android:id="@+id/toolbar"
-            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-            android:elevation="4dp"/>
-        <FrameLayout
-            android:id="@+id/fragment_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
-    </LinearLayout>
+        android:layout_width="match_parent"/>
 
     <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         android:layout_gravity="start"
         android:id="@+id/nav_view"
         app:headerLayout="@layout/nav_header"
         app:menu="@menu/draw_menu"/>
+
+
+
+
 </androidx.drawerlayout.widget.DrawerLayout>
