--- a/src/Android_App/app/src/main/res/layout/activity_bluetooth.xml
+++ b/src/Android_App/app/src/main/res/layout/activity_bluetooth.xml
@@ -55,4 +55,13 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/location_permissions" />
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/disconnect" />
 </androidx.constraintlayout.widget.ConstraintLayout>
