--- a/docs/_sass/minimal-mistakes.scss
+++ b/docs/_sass/minimal-mistakes.scss
@@ -4,6 +4,9 @@
  * Licensed under MIT (https://github.com/mmistakes/minimal-mistakes/blob/master/LICENSE)
 */
 
+
+@use "sass:math";
+
 /* Variables */
 @import "minimal-mistakes/variables";
 
@@ -237,11 +240,22 @@ img { max-width: 100%; }
 
 .column {
   float: left;
-  width: 50%;
   padding: 5px;
 }
+
+@for $i from 2 to 6 {
+  $wanted_width: 100%/$i;
+  .elements_no_#{$i}{
+    width: #{$wanted_width};
+  }
+}
 @media screen and (max-width: 500px) {
-  .column {
+  .elements_no_2 {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 800px) {
+  .elements_no_5 {
     width: 100%;
   }
 }
@@ -250,4 +264,164 @@ img { max-width: 100%; }
   content: "";
   clear: both;
   display: table;
+}
+
+//Default user avatar
+
+$height: 20vh;
+$width: $height * 3 / 4;
+$borderWidth: $height * 1 / 10;
+$dark_mode_gray: lightgray;
+
+.default_user {
+  position: relative;
+  height: $height;
+  width: $width;
+  
+  // Body
+  &:after {
+    content: '';
+    display: block;
+    position: absolute;
+    box-sizing: border-box;
+    top: $height * 18 / 40;
+    height: $height * 15 / 40;
+    width: $width;
+    border: 0px solid $dark_mode_gray;
+    border-radius: ($width*3/10) ($width*3/10) 0 0;
+    border-width: $borderWidth $borderWidth 0px $borderWidth;
+  }
+  
+  // Head
+  &:before {
+    content: '';
+    display: block;
+    box-sizing: border-box;
+    position: absolute;
+    top: 0;
+    left: $height * 1/8;
+    height: $height * 1/2;
+    width: $height * 1/ 2;
+    border-radius: 50%;
+    border: $borderWidth solid $dark_mode_gray;
+  }
+}
+
+.team_member {
+  padding: 30px 0 40px;
+  margin-bottom: 30px;
+  background-color: transparent;
+  text-align: center;
+  overflow: hidden;
+  position: relative;
+}
+
+.team_member .pic_or_avatar {
+  display: inline-block;
+  height: 130px;
+  width: 130px;
+  margin-bottom: 50px;
+  z-index: 1;
+  position: relative;
+}
+
+.team_member .pic_or_avatar::before {
+  content: "";
+  width: 100%;
+  height: 0;
+  border-radius: 50%;
+  background-color: #1369ce;
+  position: absolute;
+  bottom: 135%;
+  right: 0;
+  left: 0;
+  opacity: 0.9;
+  transform: scale(3);
+  transition: all 0.3s linear 0s;
+}
+
+.team_member:hover .pic_or_avatar::before {
+  height: 100%;
+}
+
+.team_member .pic_or_avatar::after {
+  content: "";
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #1369ce;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+.team_member .pic_or_avatar img {
+  width: 100%;
+  height: auto;
+  border-radius: 50%;
+  transform: scale(1);
+  transition: all 0.9s ease 0s;
+}
+
+.team_member:hover .pic_or_avatar img {
+  box-shadow: 0 0 0 14px #f7f5ec;
+  transform: scale(0.7);
+}
+
+.team_member .name {
+  font-size: 16px;
+  margin-top: 1.5em;
+}
+.team_member .role {
+  display: block;
+  font-size: 12px;
+  color: #4e5052;
+  text-transform: capitalize;
+}
+
+.team_member .socials {
+  width: 100%;
+  padding: 0;
+  margin: 0;
+  background-color: #1369ce;
+  position: absolute;
+  bottom: -100px;
+  left: 0;
+  transition: all 0.5s ease 0s;
+}
+
+.team_member:hover .socials {
+  bottom: 0;
+}
+
+.team_member .socials li {
+  display: inline-block;
+}
+
+.team_member .socials li a {
+  display: block;
+  padding: 10px;
+  font-size: 17px;
+  color: white;
+  transition: all 0.3s ease 0s;
+  text-decoration: none;
+}
+
+.team_member .socials li a:hover {
+  color: #1369ce;
+  background-color: #f7f5ec;
+}
+
+@media screen and (max-width: 800px) {
+  .team_member .socials{
+    bottom: auto;
+    border: 0px solid transparent;
+    border-radius: 10vw;
+  }
+  .team_member:hover .socials{
+    bottom: auto;
+    border: 0px solid transparent;
+    border-radius: 10vw;
+  }
 }
