added hardware and firmware dive downs

--- a/docs/_sass/minimal-mistakes.scss
+++ b/docs/_sass/minimal-mistakes.scss
@@ -260,6 +260,10 @@ img { max-width: 100%; }
   }
 }
 
+#glasses_images_container{
+  max-height: 300px;
+}
+
 #glasses_images_container::after {
   content: "";
   clear: both;
