refactored into custom scss for clarity

--- a/docs/_sass/minimal-mistakes.scss
+++ b/docs/_sass/minimal-mistakes.scss
@@ -41,391 +41,5 @@
 @import "minimal-mistakes/archive";
 @import "minimal-mistakes/sidebar";
 @import "minimal-mistakes/print";
-.wide2 {
-    .page {
-      float: left;
-      width: 100%;
-      @include breakpoint($large) {
-        padding-left: 0;
-      }
-  
-      @include breakpoint($x-large) {
-        padding-left: 0;
-      }
-    }
-  
-    .page__related {
-      @include breakpoint($large) {
-        padding-left: 0;
-      }
-  
-      @include breakpoint($x-large) {
-        padding-left: 0;
-      }
-    }
-}
 
-
-/* Glasses animations Copyright (c) 2022 by Shaw (https://codepen.io/shshaw/pen/LBZyyM)*/
-
-img { max-width: 100%; }
-
-.glasses {
-  max-width: 450px;
-  margin: auto;
-  //visibility: hidden; 
-  //position: relative;
-  cursor: pointer;
-
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center center;
-
-  >img {
-    visibility: visible;
-    display: block;
-    transition: opacity 0.3s linear, 
-      transform 0.4s cubic-bezier(0.075, 0.82, 0.165, 1) !important;
-  }
-
-  &:before {
-    content: '';
-    display: block;
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: #000;
-    z-index: 2;
-    visibility: visible;
-    opacity: 0;
-    transition: opacity 0.4s linear;
-    pointer-events: none;
-  }
-}
-
-@media screen and (max-width: 500px) {
-  .glasses {
-    max-width: 150px;
-  }
-}
-
-.glasses:hover {
-  z-index: 999;
-  
-  >img {
-    opacity: 1;
-    transform: scale(1.2);
-  }
-}
-
-/* ---------------------------------- */
-
-.glasses__popup {
-  z-index: 99;
-  position: fixed;
-  display: inline-block;
-  width: 80%;
-  max-width: 1000px;
-  max-height: 120vh;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  //border: solid 1px red;
-  pointer-events: none;
-  background: inherit;
-  visibility: visible;
-  z-index: 999; 
-
-  img {
-    opacity: 1;
-    width: auto;
-    height: auto;
-    max-height: 100%;
-    max-width: 100%;
-    //outline: solid 1px blue;
-  }
-
-}
-
-@supports ( --row-size: calc( 100% / var(--row-total) ) ) {
-
-  .glasses__popup {
-    visibility: hidden;
-    opacity: 0;
-    transition: opacity .4s linear;
-  }
-
-  .glasses__row {
-    --row-size: calc( 100% / var(--row-total) );
-    position: absolute;
-    width: 100%;
-    left: 0%;
-    top: calc( 0% + (var(--row-size) * var(--row-index)) );
-
-    height: var(--row-size);
-    background: inherit;
-    overflow: hidden;
-
-    transform-origin: 0 0; // transform: scale(0.5);
-    transform-origin: calc( var(--random) * 50% ) 50%;
-    transform: scale(0.8) translate(0%, calc( var(--random) * 20% ));
-
-    transform: translate(0, 0) scale(1); 
-    animation-name: photo-bounce;
-    animation-fill-mode: both;
-    animation-direction: forwards;
-    animation-delay: 0.1s;
-    animation-duration: 0.4s;
-    animation-timing-function: steps(1);
-  }
-
-  .glasses__row-inner {
-    opacity: 1;
-    visibility: visible;
-    position: absolute;
-    background: inherit;
-    width: 100%;
-    height: calc(100% * var(--row-total));
-    transform: translateY(calc(-1 * ( 100% / var(--row-total) ) * var(--row-index)) );
-  }
-
-  .glasses:hover {
-    
-    .glasses__popup { opacity: 1; }
-
-    &:before { opacity: .4; }
-
-    .glasses__row {
-      animation-name: photo-bounce2;
-      animation-duration: 0.3s;
-      animation-iteration-count: 1;
-      animation-direction: reverse;
-      animation-timing-function: steps(1);
-    }
-
-  }
-
-}
-
-
-
-
-@keyframes photo-bounce {
-  25% {
-    transform: translate(-10%, 0%) scale(1);
-  }
-  50% {
-    transform: translate(10%, -2%) scale(1.3);
-  }
-  75% {
-    transform: translate(-3%, 2%) scale(0.9);
-  }
-}
-
-@keyframes photo-bounce2 {
-  25% {
-    transform: translate(5%, 0%) scale(1);
-  }
-  50% {
-    transform: translate(-10%, -2%) scale(1.3);
-  }
-  75% {
-    transform: translate(10%, 5%) scale(0.9);
-  }
-}
-
-.column {
-  float: left;
-  padding: 5px;
-}
-
-@for $i from 2 to 6 {
-  $wanted_width: 100%/$i;
-  .elements_no_#{$i}{
-    width: #{$wanted_width};
-  }
-}
-@media screen and (max-width: 500px) {
-  .elements_no_2 {
-    width: 100%;
-  }
-}
-@media screen and (max-width: 800px) {
-  .elements_no_5 {
-    width: 100%;
-  }
-}
-
-#glasses_images_container{
-  max-height: 300px;
-}
-
-#glasses_images_container::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-//Default user avatar
-
-$height: 20vh;
-$width: $height * 3 / 4;
-$borderWidth: $height * 1 / 10;
-$dark_mode_gray: lightgray;
-
-.default_user {
-  position: relative;
-  height: $height;
-  width: $width;
-  
-  // Body
-  &:after {
-    content: '';
-    display: block;
-    position: absolute;
-    box-sizing: border-box;
-    top: $height * 18 / 40;
-    height: $height * 15 / 40;
-    width: $width;
-    border: 0px solid $dark_mode_gray;
-    border-radius: ($width*3/10) ($width*3/10) 0 0;
-    border-width: $borderWidth $borderWidth 0px $borderWidth;
-  }
-  
-  // Head
-  &:before {
-    content: '';
-    display: block;
-    box-sizing: border-box;
-    position: absolute;
-    top: 0;
-    left: $height * 1/8;
-    height: $height * 1/2;
-    width: $height * 1/ 2;
-    border-radius: 50%;
-    border: $borderWidth solid $dark_mode_gray;
-  }
-}
-
-.team_member {
-  padding: 30px 0 40px;
-  margin-bottom: 30px;
-  background-color: transparent;
-  text-align: center;
-  overflow: hidden;
-  position: relative;
-}
-
-.team_member .pic_or_avatar {
-  display: inline-block;
-  height: 130px;
-  width: 130px;
-  margin-bottom: 50px;
-  z-index: 1;
-  position: relative;
-}
-
-.team_member .pic_or_avatar::before {
-  content: "";
-  width: 100%;
-  height: 0;
-  border-radius: 50%;
-  background-color: #1369ce;
-  position: absolute;
-  bottom: 135%;
-  right: 0;
-  left: 0;
-  opacity: 0.9;
-  transform: scale(3);
-  transition: all 0.3s linear 0s;
-}
-
-.team_member:hover .pic_or_avatar::before {
-  height: 100%;
-}
-
-.team_member .pic_or_avatar::after {
-  content: "";
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  background-color: #1369ce;
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-
-.team_member .pic_or_avatar img {
-  width: 100%;
-  height: auto;
-  border-radius: 50%;
-  transform: scale(1);
-  transition: all 0.9s ease 0s;
-}
-
-.team_member:hover .pic_or_avatar img {
-  box-shadow: 0 0 0 14px #f7f5ec;
-  transform: scale(0.7);
-}
-
-.team_member .name {
-  font-size: 16px;
-  margin-top: 1.5em;
-}
-.team_member .role {
-  display: block;
-  font-size: 12px;
-  color: #4e5052;
-  text-transform: capitalize;
-}
-
-.team_member .socials {
-  width: 100%;
-  padding: 0;
-  margin: 0;
-  background-color: #1369ce;
-  position: absolute;
-  bottom: -100px;
-  left: 0;
-  transition: all 0.5s ease 0s;
-}
-
-.team_member:hover .socials {
-  bottom: 0;
-}
-
-.team_member .socials li {
-  display: inline-block;
-}
-
-.team_member .socials li a {
-  display: block;
-  padding: 10px;
-  font-size: 17px;
-  color: white;
-  transition: all 0.3s ease 0s;
-  text-decoration: none;
-}
-
-.team_member .socials li a:hover {
-  color: #1369ce;
-  background-color: #f7f5ec;
-}
-
-@media screen and (max-width: 800px) {
-  .team_member .socials{
-    bottom: auto;
-    border: 0px solid transparent;
-    border-radius: 10vw;
-  }
-  .team_member:hover .socials{
-    bottom: auto;
-    border: 0px solid transparent;
-    border-radius: 10vw;
-  }
-}
+@import "custom.scss";
