--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -27,3 +27,5 @@
 <script type="text/javascript" async
 src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
 </script>
+
+{% raw %}{% seo %}{% endraw %}
