--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -30,14 +30,14 @@ src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
 
 <!-- Favicons from https://realfavicongenerator.net -->
 
-<link rel="apple-touch-icon" sizes="180x180" href="/assets/favicons/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/assets/favicons/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/assets/favicons/favicon-16x16.png">
-<link rel="manifest" href="/assets/favicons/site.webmanifest">
-<link rel="mask-icon" href="/assets/favicons/safari-pinned-tab.svg" color="#36729b">
-<link rel="shortcut icon" href="/assets/favicons/favicon.ico">
+<link rel="apple-touch-icon" sizes="180x180" href="/SmartGlass/assets/favicons/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/SmartGlass/assets/favicons/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/SmartGlass/assets/favicons/favicon-16x16.png">
+<link rel="manifest" href="/SmartGlass/assets/favicons/site.webmanifest">
+<link rel="mask-icon" href="/SmartGlass/assets/favicons/safari-pinned-tab.svg" color="#36729b">
+<link rel="shortcut icon" href="/SmartGlass/assets/favicons/favicon.ico">
 <meta name="msapplication-TileColor" content="#36729b">
-<meta name="msapplication-config" content="/assets/favicons/browserconfig.xml">
+<meta name="msapplication-config" content="/SmartGlass/assets/favicons/browserconfig.xml">
 <meta name="theme-color" content="#8c5151">
 
 
