Added Google verification

--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -40,6 +40,7 @@ src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-MML-AM_CHTML">
 <meta name="msapplication-config" content="/SmartGlass/assets/favicons/browserconfig.xml">
 <meta name="theme-color" content="#8c5151">
 
+<meta name="google-site-verification" content="KC8XFk4iNkMQ1D7trj3W_R1DpUfz0UNQx4Y2JGY2-6g" />
 
 {% seo %}
 
